# crx-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  hello.py  json.json  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  daily-e2e.yml  pr.yml  release.yml  tests.yml
crx_analyzer/: cli.py  extension.py  models.py  risk.py
ext_analyzer/: cli.py  download.py  extension.py  risk.py
src/: cli.py  extension.py  main.py  models.py  risk.py
src/extensions/: download.py  extension.py  models.py  risk.py
test/: test_cli.py  test_cli_nightly.py  test_extension.py  test_manifest.py  test_risk.py
test/extensions/: test_extension.py  test_manifest.py
test/extensions/test_extension_zip/: nnkgneoiohoecpdiaponcejilbhhikei.crx
test/extensions/test_manifests/: manifest1.json  manifest_chrome_redux.json  manifest_chrome_vite.json  manifest_edge_example.json  manifest_edge_redux.json  manifest_malicious_poc.json  manifest_pixiv_batch_downloader.json
test/test_manifests/: manifest_chrome_redux.json  manifest_chrome_shooting_game.json  manifest_chrome_vite.json  manifest_edge_redux_v2.json  manifest_pixiv_batch_downloader.json
util/semgrep/: fetch_call.yaml
