[project]
name = "ext-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
