[project]
name = "crx-analyzer"
version = "v0.1.0-alpha.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.5",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
markers = [
    "e2e: marks tests as end-to-end tests (deselected by default)"
]
addopts = "-m 'not e2e'"

[project.scripts]
crx-analyzer = "crx_analyzer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
